versioned_docs/version-8.7/reference/ip-addresses.md
---
id: saas-ip-addresses
title: "Hostnames and IP addresses for Camunda connections"
sidebar_label: Hostnames and IP addresses for Camunda connections
description: "Details on the network configuration for Camunda 8 SaaS clusters."
---

<span class="badge badge--cloud">Camunda 8 SaaS only</span>

Camunda 8 SaaS hostnames and IP addresses for inbound and outbound connections.

## Static outbound IP addresses

Camunda SaaS uses static IP addresses for some of its services. These addresses can be retrieved using the [Camunda Management API `/meta/ip-ranges` endpoint](https://console.cloud.camunda.io/customer-api/openapi/docs/#/default/GetMeta).

Although changes to these IP addresses are infrequent, they may occur from time to time. Any change will be published through the API at least 24 hours in advance. If you rely on these IP addresses for your network configuration, it is strongly recommended fetching the latest version at least once every 24 hours.

:::note
Typically, any changes to these IP addresses are communicated in advance. However, in exceptional cases, it may not be possible to provide prior notice.
:::

## Inbound connections

When you [create a cluster](/components/console/manage-clusters/create-cluster.md) in Camunda 8 SaaS, you will receive a set of hostnames for connecting to the different cluster components.

The public IP addresses exposed for connecting to the cluster depends on the cloud provider and [region](/reference/regions.md) the cluster was created in.

- **Amazon Web Services (AWS)**: Each endpoint is served by multiple IP addresses.
- **Google Cloud Platform (GCP)**: IP addresses are AnyCast IP addresses and are globally available.

:::note
AWS-hosted clusters support secure connectivity using AWS PrivateLink. For setup details, see [version 8.9 secure connectivity (AWS PrivateLink) documentation](/versioned_docs/version-8.9/components/saas/secure-connectivity/index.md) for more information.
:::

## Outbound connections

If you use a [Camunda connector](/components/connectors/introduction.md), your cluster sends requests from the Camunda SaaS infrastructure to the external services you configure in your processes.

Depending on the cloud provider, [region](/reference/regions.md), and type of configured connector, connections are made from different IP addresses.

To ensure the security of incoming connector connections, you can:

- Authenticate the requests made by the Camunda connector(s). For example, see [REST connector authentication](/components/connectors/protocol/rest.md#authentication).
- Run the connectors into your own infrastructure and remove incoming calls from the Camunda infrastructure to your own services. For example, see [Self-Managed connectors](/self-managed/connectors-deployment/install-and-start.md).
